--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ before_install:
   - docker build -t iangwaigdev/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run iangwaigdev/docker-react -- --coverage
+  - docker run iangwaigdev/docker-react npm run test -- --coverage
