--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,15 @@ before_install:
 
 script:
   - docker run iangwaigdev/docker-react npm run test -- --coverage
+
+deploy:
+  provider: elasticbeanstalk
+  region: 'us-east-1'
+  app: 'docker'
+  env: 'DockerReact-env'
+  bucket_name: 'elasticbeanstalk-us-east-1-366665012114'
+  on:
+    braanch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret:
+    secure: '$AWS_SECRET_KEY'
