--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ script:
 deploy:
   provider: elasticbeanstalk
   region: 'us-east-1'
-  app: 'docker'
+  app: 'docker-react'
   env: 'DockerReact-env'
   bucket_name: 'elasticbeanstalk-us-east-1-366665012114'
   on:
